--- a/todoapp/templates/todoapp/partials/form.html
+++ b/todoapp/templates/todoapp/partials/form.html
@@ -1,14 +1,32 @@
-<div class="form-content-grid">
-    {% for field in form %}
-        <div class="form-field-control {{field.field.widget.attrs.class}}">
-            <label class="field-label" for="{{field.id_for_label}}">{{field.label}}</label>
+{% for field in form %}
+    {% if field.field.widget.input_type == "password" %}
+    <div class="form-input">
+        <label for="{{field.id_for_label}}">{{field.label}}</label>
+        <div class="password-to-reveal">
             {{field}}
-            {{field.errors}}
-            {% if field.help_text %}
-                <div class="field-help-text">
-                    <p>{{field.help_text}}</p>
+            <div class="reveal-password-box">
+                <div class="reveal-password">
+                    <i class="fa-solid fa-eye"></i>
                 </div>
-            {% endif %}
+            </div>
         </div>
-    {% endfor %}
-</div>
+        {{field.errors}}
+        {% if field.help_text %}
+        <div class="field-help-text">
+            <p>{{field.help_text}}</p>
+        </div>
+        {% endif %}
+    </div>
+    {% else %}
+    <div class="form-input">
+        <label for="{{field.id_for_label}}">{{field.label}}</label>
+        {{field}}
+        {{field.errors}}
+        {% if field.help_text %}
+        <div class="field-help-text">
+            <p>{{field.help_text}}</p>
+        </div>
+        {% endif %}
+    </div>
+    {% endif %}
+{% endfor %}
