--- a/todoapp/templates/todoapp/view/login.html
+++ b/todoapp/templates/todoapp/view/login.html
@@ -1,18 +1,34 @@
-{% extends "global/base_home.html" %}
+{% extends "global/global.html" %}
 {% block title %}{{title}}{% endblock title %}
 {% block content %}
-    <div class="main-content">
-        <div class="content-container text-center">
-            <h2>Login</h2>
-        </div>
-        <div class="content-container">
-            <div class="form-container">
-                <form action="{% url "todoapp:login" %}" method="POST">
+<div id="front-container">
+    <div class="box-container">
+        <div class="box">
+            <div class="box-header">
+                <h1>Login</h1>
+            </div>
+            <div class="box-body">
+                <form class="form-control" action="{% url "todoapp:login" %}" method="POST">
                     {% csrf_token %}
                     {% include "todoapp/partials/form.html" %}
-                    <button class="btn btn-primary">Login</button>
+                    <div class="form-block">
+                        <button class="btn-block btn-primary">Login</button>
+                    </div>
                 </form>
+                <div class="sep">
+                    <svg class="sep-line" width="100%" height="1px">
+                        <rect width="100%" height="1px"/>
+                    </svg>
+                    <span>or</span>
+                    <svg class="sep-line" width="100%" height="1px">
+                        <rect width="100%" height="1px"/>
+                    </svg>
+                </div>
+                <div class="form-block">
+                    <a class="btn-block-link btn-success" href="{% url "todoapp:register" %}">Create an account</a>
+                </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock content %}
