--- a/todoapp/templates/todoapp/view/register.html
+++ b/todoapp/templates/todoapp/view/register.html
@@ -23,3 +23,8 @@
     </div>
 </div>
 {% endblock content %}
+{% block script %}
+<script>
+    set_password_revealers();
+</script>
+{% endblock script %}
