--- a/todoapp/templates/todoapp/view/login.html
+++ b/todoapp/templates/todoapp/view/login.html
@@ -32,3 +32,8 @@
     </div>
 </div>
 {% endblock content %}
+{% block script %}
+<script>
+    set_password_revealers();
+</script>
+{% endblock script %}
